{
    "name": "CameraInputActions",
    "maps": [
        {
            "name": "Camera",
            "id": "7ab071bf-3d37-46f4-a384-b1cfc07c986b",
            "actions": [
                {
                    "name": "RotateLeft",
                    "type": "Button",
                    "id": "78ae5ea2-1297-4d36-a14f-934aeaac74a1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateRight",
                    "type": "Button",
                    "id": "b4ddfdae-17ab-4bd1-a446-580fc9fe2174",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "62afbcd2-ac35-471d-b398-9955c4a98bce",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5fe4aa7c-468a-4589-aee2-9f2dd6e9fe88",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a5e4eaa-3d21-4f86-a46a-dc7dfa608e29",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f21c9054-103c-4f77-b885-2d06ee848ea4",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}